# bugsounds

./: Cargo.toml  HISTON_PONDA.md  waveform-viewer.html
assets/bohm/: MANUAL.md
assets/piston-honda-factory/: MANUAL.md  README.txt
bohmbino/: Cargo.toml
bohmbino/src/: combined.rs  kick.rs  lib.rs  output.rs
bohmbino/src/bohm/: common.rs  fm2x.rs  hz1.rs  mod.rs  multi.rs  olp4.rs  pmk1.rs  px3.rs  sp6.rs  vxt.rs  wt4.rs
bohmbino/src/groove/: mod.rs
bohmbino/src/performer/: mod.rs
bugsounds/: Cargo.toml
conductor/: Cargo.toml
conductor/src/: clock.rs  event.rs  lib.rs  transport.rs
daisy/conductor-daisy/: Cargo.toml
daisy/conductor-daisy/src/: main.rs
egui-demo/: Cargo.toml
egui-demo/src/: main.rs
gui/bohmbino-gui/: Cargo.toml
gui/bohmbino-gui/src/: main.rs
gui/osc1-gui/: Cargo.toml
gui/osc1-gui/src/: main.rs
gui/wavetable3d-gui/: Cargo.toml
gui/wavetable3d-gui/src/: main.rs
osc1/: Cargo.toml
osc1/src/: lib.rs  main.rs  output.rs  synth.rs  wavetable.rs  wavetable3d.rs
snyth/: Cargo.toml  Dioxus.toml
src/: main.rs
