[package]
name = "bugsounds-pack"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal.workspace = true
fundsp.workspace = true

[workspace]
members = [
	"bugsounds",
	"conductor",
	"egui-demo",
	"daisy/conductor-daisy"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
cpal = "0.17.0"
fundsp = "0.20.0"
