[package]
edition = "2024"
name = "bugsounds-pack"
version = "0.1.0"

[dependencies.cpal]
workspace = true

[dependencies.fundsp]
workspace = true

[workspace]
members = [
    "bugsounds",
    "conductor",
    "egui-demo",
    "daisy/conductor-daisy",
    "snyth", "snyth",
]
resolver = "3"

[workspace.package]
license = "UNLICENSED"
edition = "2024"

[workspace.dependencies]
cpal = "0.17.0"
fundsp = "0.20.0"
