[package]
edition = "2024"
name = "bugsounds-pack"
version = "0.1.0"

[dependencies.cpal]
workspace = true

[dependencies.fundsp]
workspace = true

[workspace]
members = [
    "bugsounds",
    "conductor",
    "egui-demo",
    "daisy/conductor-daisy",
    "snyth",
    "osc1",
    "gui/osc1-gui",
    "gui/wavetable3d-gui",
]
resolver = "3"

[workspace.package]
license = "UNLICENSED"
edition = "2024"

[workspace.dependencies]
cpal = "0.17.3"
eframe = "0.33"
fundsp = "0.23.0"
hound = "3.5"
